<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.datainsights.assignmentapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium">
        <TextView
            android:text="@string/title"
            android:textColor="@android:color/white"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_500"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:padding="@dimen/padding_medium"/>
        <ImageView
            android:src="@drawable/ic_account_circle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            tools:ignore="ContentDescription" />
        <TextView
            android:text="@string/sub_title_1"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/gray_300"
            android:padding="@dimen/padding_medium"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:weightSum="1">
            <TextView
                android:text="@string/lbl_name"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.78"/>
            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/hint_name"
                android:imeOptions="actionNext"
                android:layout_weight="0.22"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:weightSum="1">
            <TextView
                android:text="@string/lbl_nrc"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.78"/>
            <EditText
                android:id="@+id/txtNRC"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nrc"
                android:imeOptions="actionNext"
                android:layout_weight="0.22"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:weightSum="1">
            <TextView
                android:text="@string/lbl_dob"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.78"/>
            <EditText
                android:id="@+id/txtDOB"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_dob"
                android:imeOptions="actionNext"
                android:layout_weight="0.22"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:weightSum="1">
            <TextView
                android:text="@string/lbl_f_name"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.78"/>
            <EditText
                android:id="@+id/txtFName"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_f_name"
                android:imeOptions="actionNext"
                android:layout_weight="0.22"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:weightSum="1">
            <TextView
                android:text="@string/lbl_gender"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.78"
                android:layout_gravity="center_vertical"/>
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.22">
                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_male"
                    android:textColor="@android:color/black"
                    android:checked="true"
                    />
                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_female"
                    android:textColor="@android:color/black"
                    />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:weightSum="1">
            <TextView
                android:text="@string/lbl_address"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.78"/>
            <EditText
                android:id="@+id/txtAddress"
                android:inputType="textPostalAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address"
                android:imeOptions="actionNext"
                android:layout_weight="0.22"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:weightSum="1">
            <TextView
                android:text="@string/lbl_phone"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.78"/>
            <EditText
                android:id="@+id/txtPhone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:imeOptions="actionNext"
                android:layout_weight="0.22"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:weightSum="1">
            <TextView
                android:text="@string/lbl_email"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.78"/>
            <EditText
                android:id="@+id/txtEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:imeOptions="actionSend"
                android:layout_weight="0.22"/>
        </LinearLayout>
        <TextView
            android:text="@string/sub_title_2"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/gray_300"
            android:padding="@dimen/padding_medium"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:weightSum="1">
            <TextView
                android:text="@string/lbl_education"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.78"/>
            <EditText
                android:id="@+id/txtEducation"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_education"
                android:imeOptions="actionNext"
                android:layout_weight="0.22"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:weightSum="1">
            <TextView
                android:text="@string/lbl_other"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.78"/>
            <EditText
                android:id="@+id/txtOther"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_other"
                android:imeOptions="actionSend"
                android:layout_weight="0.22"/>
        </LinearLayout>
        <TextView
            android:text="@string/sub_title_3"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/gray_300"
            android:padding="@dimen/padding_medium"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:weightSum="1">
            <TextView
                android:text="@string/lbl_year"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.78"/>
            <EditText
                android:id="@+id/txtYears"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_year"
                android:imeOptions="actionNext"
                android:layout_weight="0.22"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:weightSum="1">
            <TextView
                android:text="@string/lbl_company"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.78"/>
            <EditText
                android:id="@+id/txtCompany"
                android:inputType="text"
                android:singleLine="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_company"
                android:imeOptions="actionNext"
                android:layout_weight="0.22"/>
        </LinearLayout>
        <TextView
            android:text="@string/sub_title_4"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:padding="@dimen/padding_medium"
            android:background="@color/gray_300"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:weightSum="1">
            <TextView
                android:text="@string/lbl_p_details"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.78"/>
            <EditText
                android:id="@+id/txtPDetails"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_p_details"
                android:imeOptions="actionNone"
                android:layout_weight="0.22"
                android:maxLength="150"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnSubmit"
            android:text="@string/btn_submit"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

</ScrollView>
